# tg-ch18

./: .gitignore  ANALYSIS_REPORT.md  CH18_LINUX_COMPAT_PROGRESS.md  Cargo.toml  EFFICIENT_PORTING_STRATEGY.md  LINUX_COMPATIBILITY_TEST_REPORT.md  QEMU_COMPATIBILITY_ANALYSIS.md  QUICK_REFERENCE.md  QUICK_START.md  README.md  RESOURCES_CREATED.md  SYSCALL_ANALYSIS.md  SYSCALL_CONVENTION_TABLE.md  SYSCALL_DEBUG_LOG.md  SYSCALL_IMPLEMENTATION_3CALLS.md  SYSCALL_IMPROVEMENTS.md  build.rs  exercise.md  run_with_debug.sh  test.sh
.cargo/: config.toml
linux-compatible-tests/: CH6_CLEANUP_FINAL.txt  CH6_CLEANUP_REPORT.md  COMPLETION_SUMMARY.md  Makefile  QEMU_CONFIG_FIXED.md  QEMU_FIX_GUIDE.md  QEMU_QUICK_REF.md  QUICKSTART.md  README.md  REPAIR_SUMMARY.txt  TG_CH18_INTEGRATION.md  TG_CH18_KERNEL_TESTING.md  ch18_file0.c  ch18_file1.c  ch18_file2  ch18_file2.c  ch18_file3  ch18_file3.c  compare_test.sh  pack-to-fsimg.sh  quickstart.sh  run-in-qemu-system.sh  test-qemu.sh
linux-user/: ch18_file0  ch18_file1  hello-rv64  hello-rv64.s
src/: fs.rs  main.rs  process.rs  processor.rs  virtio_block.rs
tg-console/: Cargo.toml  README.md
tg-console/src/: lib.rs
tg-easy-fs/: Cargo.toml  README.md
tg-easy-fs/src/: block_cache.rs  efs.rs  file.rs  layout.rs  lib.rs  pipe.rs  vfs.rs
tg-kernel-alloc/: Cargo.toml  README.md
tg-kernel-alloc/src/: lib.rs
tg-kernel-context/: Cargo.toml  README.md
tg-kernel-context/src/: lib.rs
tg-kernel-context/src/foreign/: mod.rs  multislot_portal.rs
tg-kernel-vm/: Cargo.toml  README.md
tg-kernel-vm/src/space/: mod.rs
tg-linker/: Cargo.toml  README.md
tg-linker/src/: app.rs  lib.rs
tg-sbi/: Cargo.toml  README.md
tg-sbi/src/: lib.rs  m_entry.asm  msbi.rs
tg-signal/: Cargo.toml  README.md
tg-signal-defs/: Cargo.toml  README.md
tg-signal-defs/src/: lib.rs
tg-signal-impl/: Cargo.toml  README.md
tg-signal-impl/src/: default_action.rs  lib.rs  signal_set.rs
tg-signal/src/: lib.rs
tg-sync/: Cargo.toml  README.md
tg-sync/src/: condvar.rs  mutex.rs  semaphore.rs  up.rs
tg-syscall/: Cargo.toml  README.md
tg-syscall/src/: fs.rs  lib.rs  syscall.h.in  user.rs
tg-syscall/src/kernel/: mod.rs
tg-task-manage/: Cargo.toml  README.md
tg-task-manage/src/: proc_manage.rs
