[package]
name = "tg-console"
description = "Provides `print!`, `println!` and `log::Log` with customizable implementations for rCore tutorial."
version = "0.1.0-preview.2"
edition = "2021"
authors = ["YdrMaster <ydrml@hotmail.com>"]
repository = "https://github.com/rcore-os/rCore-Tutorial-in-single-workspace"
homepage = "https://github.com/rcore-os/rCore-Tutorial-in-single-workspace"
documentation = "https://docs.rs/tg-console"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["rcore", "console", "no-std", "riscv"]
categories = ["no-std", "embedded"]

[dependencies]
log = "0.4"
spin = "0.9"
