[package]
name = "tg-easy-fs"
description = "A simple filesystem implementation for rCore tutorial OS."
version = "0.1.0-preview.2"
edition = "2021"
authors = ["Yifan Wu <shinbokuow@163.com>"]
repository = "https://github.com/rcore-os/rCore-Tutorial-in-single-workspace"
homepage = "https://github.com/rcore-os/rCore-Tutorial-in-single-workspace"
documentation = "https://docs.rs/tg-easy-fs"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["rcore", "filesystem", "no-std", "riscv"]
categories = ["no-std", "embedded", "filesystem"]

[dependencies]
spin = "0.9"
bitflags = "1.2"
