[package]
name = "tg-kernel-alloc"
description = "Kernel memory allocator for rCore tutorial OS using buddy allocation."
version = "0.1.0-preview.2"
edition = "2021"
authors = ["YdrMaster <ydrml@hotmail.com>"]
repository = "https://github.com/rcore-os/rCore-Tutorial-in-single-workspace"
homepage = "https://github.com/rcore-os/rCore-Tutorial-in-single-workspace"
documentation = "https://docs.rs/tg-kernel-alloc"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["rcore", "kernel", "allocator", "riscv"]
categories = ["no-std", "embedded", "memory-management"]

[dependencies]
log = "0.4"
customizable-buddy = "0.0.3"
page-table = "0.0.6"
