[package]
name = "tg-linker"
description = "Linker script generation utilities for rCore tutorial OS kernel."
version = "0.1.0-preview.2"
edition = "2021"
authors = ["YdrMaster <ydrml@hotmail.com>"]
repository = "https://github.com/rcore-os/rCore-Tutorial-in-single-workspace"
homepage = "https://github.com/rcore-os/rCore-Tutorial-in-single-workspace"
documentation = "https://docs.rs/tg-linker"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["rcore", "linker", "no-std", "riscv"]
categories = ["no-std", "embedded"]

[package.metadata.docs.rs]
targets = ["riscv64gc-unknown-none-elf"]

[dependencies]
