[package]
name = "tg-signal-defs"
description = "Signal definitions for rCore tutorial OS."
version = "0.1.0-preview.1"
edition = "2021"
authors = ["scPointer <jax01@foxmail.com>"]
repository = "https://github.com/rcore-os/rCore-Tutorial-in-single-workspace"
homepage = "https://github.com/rcore-os/rCore-Tutorial-in-single-workspace"
documentation = "https://docs.rs/tg-signal-defs"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["rcore", "signal", "no-std", "riscv"]
categories = ["no-std", "embedded"]

[dependencies]
numeric-enum-macro = "0.2"
