[package]
name = "tg-signal-impl"
description = "Signal implementation for rCore tutorial OS."
version = "0.1.0-preview.1"
edition = "2021"
authors = ["scPointer <jax01@foxmail.com>"]
repository = "https://github.com/rcore-os/rCore-Tutorial-in-single-workspace"
homepage = "https://github.com/rcore-os/rCore-Tutorial-in-single-workspace"
documentation = "https://docs.rs/tg-signal-impl"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["rcore", "signal", "no-std", "riscv"]
categories = ["no-std", "embedded"]

[dependencies]
tg-kernel-context = { path = "../tg-kernel-context", version = "0.1.0-preview.1" }
tg-signal = { path = "../tg-signal", version = "0.1.0-preview.1" }
