[package]
name = "tg-syscall"
description = "System call definitions and interfaces for rCore tutorial OS."
version = "0.1.0-preview.2"
edition = "2021"
authors = ["YdrMaster <ydrml@hotmail.com>"]
repository = "https://github.com/rcore-os/rCore-Tutorial-in-single-workspace"
homepage = "https://github.com/rcore-os/rCore-Tutorial-in-single-workspace"
documentation = "https://docs.rs/tg-syscall"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["rcore", "syscall", "no-std", "riscv"]
categories = ["no-std", "embedded"]

[dependencies]
spin = "0.9"
bitflags = "1.2"
tg-signal-defs = { path = "../tg-signal-defs", version = "0.1.0-preview.1" }

[features]
kernel = []
user = []

[package.metadata.docs.rs]
targets = ["riscv64gc-unknown-none-elf"]
