[package]
name = "tg-task-manage"
description = "Task and process management for rCore tutorial OS, including scheduling and relationships."
version = "0.1.0-preview.1"
edition = "2021"
authors = ["zflcs <zhaofangliang@foxmail.com>"]
repository = "https://github.com/rcore-os/rCore-Tutorial-in-single-workspace"
homepage = "https://github.com/rcore-os/rCore-Tutorial-in-single-workspace"
documentation = "https://docs.rs/tg-task-manage"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["rcore", "task", "scheduler", "riscv"]
categories = ["no-std", "embedded"]

[features]
proc = []
thread = []
